Fix hadolint errors

--- a/megalinter/descriptors/kubernetes.megalinter-descriptor.yml
+++ b/megalinter/descriptors/kubernetes.megalinter-descriptor.yml
@@ -25,6 +25,6 @@ linters:
     install:
       dockerfile:
         - |
-          RUN wget https://github.com/instrumenta/kubeval/releases/latest/download/kubeval-linux-amd64.tar.gz \
+          RUN wget -q https://github.com/instrumenta/kubeval/releases/latest/download/kubeval-linux-amd64.tar.gz \
               && tar xf kubeval-linux-amd64.tar.gz \
               && cp kubeval /usr/local/bin
