--- a/megalinter/descriptors/csharp.megalinter-descriptor.yml
+++ b/megalinter/descriptors/csharp.megalinter-descriptor.yml
@@ -12,7 +12,7 @@ install:
     - zlib-dev
   dockerfile:
     - |
-      RUN wget --tries=5 -O dotnet-install.sh https://dot.net/v1/dotnet-install.sh \
+      RUN wget --tries=5 -q -O dotnet-install.sh https://dot.net/v1/dotnet-install.sh \
           && chmod +x dotnet-install.sh \
           && ./dotnet-install.sh --install-dir /usr/share/dotnet -channel Current -version latest
     - ENV PATH="${PATH}:/root/.dotnet/tools:/usr/share/dotnet"
