--- a/megalinter/descriptors/php.megalinter-descriptor.yml
+++ b/megalinter/descriptors/php.megalinter-descriptor.yml
@@ -19,8 +19,8 @@ install:
     - composer
   dockerfile:
     - |
-      RUN wget --tries=5 -O phive.phar https://phar.io/releases/phive.phar \
-          && wget --tries=5 -O phive.phar.asc https://phar.io/releases/phive.phar.asc \
+      RUN wget --tries=5 -q -O phive.phar https://phar.io/releases/phive.phar \
+          && wget --tries=5 -q -O phive.phar.asc https://phar.io/releases/phive.phar.asc \
           && PHAR_KEY_ID="0x9D8A98B29B2D5D79" \
           && ( gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$PHAR_KEY_ID" \
               || gpg --keyserver pgp.mit.edu --recv-keys "$PHAR_KEY_ID" \
