Keep license pre-formatted in docs (#386)
the license page didn't look good due to intermixing markdown with
pre-formatted plain text of the LICENSE file.

loading it in by snippet instead of copying verbatim solves this.

LICENSE can stay pre-formatted within a code-block in the Markdown.

adds the pymdownx.snippets mkdocs extension.

Co-authored-by: Nicolas Vuillamy <nicolas.vuillamy@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,9 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.snippets:
+      base_path: docs
+      check_paths: true
   - mdx_truly_sane_lists
   - attr_list
 extra_javascript:
