Touch-up docs (#410)
* Minor dot instead of source

Dot is always available, source not (portability).

* Touch doc navigation

Contribute: make section and make "Contributing Guide" linked.

Supported Linters: fix relative links to their base (slash at end missing)

* Doc snippets for change-log and contributing guide

Mkdocs build can copy files (via snippets extension) as introduced in
f89926c for License.

This are the other files that are copied verbatim:

- CHANGELOG.md -> docs/CHANGELOG.md
- .github/CONTRIBUTING.md -> docs/contributing.md

NOTE: Both README.md files are specifically handled in .autmation/build.py
      as they are modified after copying.

Ref: f89926cc4c313b43bc1b4218d654308ba92d513d

* Fix title in link to license

Issue: #376

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,7 @@ nav:
   - "Linters":
       - "All supported linters": "supported-linters.md"
       - "Languages linters":
-          - "All language linters": "./supported-linters#languages"
+          - "All language linters": "./supported-linters/#languages"
           # language-start
           - "BASH":
               - "All BASH linters": "descriptors/bash.md"
@@ -156,7 +156,7 @@ nav:
               - "dotnet-format": "descriptors/vbdotnet_dotnet_format.md"
 # language-end
       - "Formats linters":
-          - "All formats linters": "./supported-linters#formats"
+          - "All formats linters": "./supported-linters/#formats"
           # format-start
           - "CSS":
               - "All CSS linters": "descriptors/css.md"
@@ -203,7 +203,7 @@ nav:
               - "v8r": "descriptors/yaml_v8r.md"
 # format-end
       - "Tooling Formats linters":
-          - "All tooling formats linters": "./supported-linters#tooling-formats"
+          - "All tooling formats linters": "./supported-linters/#tooling-formats"
           # tooling_format-start
           - "ANSIBLE":
               - "All ANSIBLE linters": "descriptors/ansible.md"
@@ -247,7 +247,7 @@ nav:
               - "terragrunt": "descriptors/terraform_terragrunt.md"
 # tooling_format-end
       - "Other checks":
-          - "All other linters": "./supported-linters#other"
+          - "All other linters": "./supported-linters/#other"
           # other-start
           - "COPYPASTE":
               - "All COPYPASTE linters": "descriptors/copypaste.md"
@@ -296,6 +296,8 @@ nav:
   - "Plugins": "plugins.md"
   - "Special thanks": "special-thanks.md"
   - "Mega-Linter vs Super-Linter": "mega-linter-vs-super-linter.md"
-  - "Contribute": "how-to-contribute.md"
+  - "Contribute":
+    - "How-to Contribute": "how-to-contribute.md"
+    - "Contributing Guide": "contributing.md"
   - "License": "license.md"
   - "Changelog": "CHANGELOG.md"
