--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,9 @@
 {
-	"name": "MEGA-LINTER",
-	"context": "..",
-	"dockerFile": "..//Dockerfile",
-	"settings": {
-		"terminal.integrated.shell.linux": "/bin/bash"
-	},
-	"extensions": [
-		"github.vscode-pull-request-github",
-		"rogalmic.bash-debug"
-	]
+  "name": "MEGA-LINTER",
+  "context": "..",
+  "dockerFile": "..//Dockerfile",
+  "settings": {
+    "terminal.integrated.shell.linux": "/bin/bash"
+  },
+  "extensions": ["github.vscode-pull-request-github", "rogalmic.bash-debug"]
 }
