[automation] Auto-update linters version, help and documentation (#448)
* [automation] Auto-update linters version, help and documentation

* Bypass dotnet-format --version bug

* Fix terrascan test case

* Allow to disable linters

* Fix terraform example

* lint fix

* [automation] Auto-update linters version, help and documentation

* [Mega-Linter] Apply linters fixes

* Fix terraform test case

quick build
TEST_KEYWORDS=terraform

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/megalinter/descriptors/csharp.megalinter-descriptor.yml
+++ b/megalinter/descriptors/csharp.megalinter-descriptor.yml
@@ -32,6 +32,7 @@ linters:
     cli_lint_fix_arg_name: "--megalinter-fix-flag" # Workaround for PythonBlackOrIsortLinter class behavior
     cli_lint_fix_remove_args:
       - "--check"
+    linter_version_cache: "000"
     examples:
       - "dotnet-format --folder --check --exclude / --include myfile.cs"
       - "dotnet-format --folder --exclude / --include myfile.cs" # Fix
