QuickFix plugin install

--- a/.automation/test/mega-linter-plugin-test/test.megalinter-descriptor.yml
+++ b/.automation/test/mega-linter-plugin-test/test.megalinter-descriptor.yml
@@ -10,6 +10,4 @@ linters:
       - "jsonlint myfile.jsonc"
     install:
       dockerfile:
-        - |
-          RUN npm install jsonlint \
-              && echo "This is my test Mega-Linter plugin !"
+        - RUN npm install jsonlint && echo "This is my test Mega-Linter plugin !"
