Display error message when docker is not found by mega-linter-runner (#469)
* Display error message when docker is not found by mega-linter-runner

* [Mega-Linter] Apply linters fixes

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/mega-linter-runner/package.json
+++ b/mega-linter-runner/package.json
@@ -82,6 +82,7 @@
     "chalk": "^4.1.0",
     "find-package-json": "^1.2.0",
     "optionator": "^0.9.1",
+    "which": "^2.0.2",
     "yeoman-environment": "^2.10.3",
     "yeoman-generator": "^4.12.0",
     "yosay": "^2.0.2"
